# SIPPY

./: .gitignore  .pre-commit-config.yaml  .travis.yml  ALGORITHM_DIFFERENTIATION_SUMMARY.md  ARARX_NLP_IMPLEMENTATION_SUMMARY.md  ARARX_TF_FIX_REPORT.md  ARMAX_POOR_FIT_INVESTIGATION.md  ARMAX_SIGNATURE_FIX_REPORT.md  ARMA_HAROLD_ANALYSIS.md  ARMA_IMPLEMENTATION_REPORT.md  ARMA_MASTER_INVESTIGATION.md  CHANGELOG.md  CLAUDE.md  Dockerfile  FIR_FIX_REPORT.md  INVESTIGATION_SUMMARY.md  MIGRATION_ACCURACY_TODO.md  MIGRATION_PROGRESS.md  NUMBA_OPTIMIZATION_SUMMARY.md  OLSims_methods.py  PARSIM_MIGRATION_ISSUES.md  PHASE4_PROFILING_VALIDATION_REPORT.md  README.md  REFACTORING_SUMMARY.md  SS_example.py  TASK4_COMPLETION_REPORT.md  TASK6_COMPLETION_SUMMARY.md  USER_GUIDE.md  WORKSPACE_CLEANUP_SUMMARY.md  agents.md  arma_validation_results.json  benchmark_comprehensive.py  benchmark_comprehensive_numba.py  cleanup_plan.md  debug_ararx_nlp.py  debug_armax_convergence.py  debug_armax_fit.py  debug_armax_harold_only.py  example_armax_MIMO.py  example_new_architecture.py  (+19 more)
.devcontainer/: compose.yaml  devcontainer.json
Examples/: ARMAX.py  ARMAX_MIMO.py  ARX_MIMO.py  Ex_ARMAX.py  Ex_ARMAX_MIMO.py  Ex_ARX_MIMO.py  Ex_CST.py  Ex_OPT_GEN-INOUT.py  Ex_RECURSIVE.py  Ex_SS.py  HP_Calibrate.csv  SS.py  __init__.py  demo_PC.py  demo_col.py  dmc_utils.py  example_CST.py  example_gen.py  example_new_architecture.py  example_parsim_demo.py  fft_demo.py  model_id_democol.ipynb  plots.py  subspace_id_frac2.ipynb  subspace_id_upstream.ipynb  system.py  test_armax.ipynb  test_examples.py  test_filters_demo.py  test_sopdt.py  upstream_id.py  utils.py
SIPPY/: OLSims_methods.py  Parsim_methods.py  __init__.py  armax.py  armaxMIMO.py  arx.py  arxMIMO.py  functionset.py  functionsetSIM.py
archive/: AGENT3_DELIVERABLES.md  compare_arma_master.py  fix_recursive.py  parsim_p_new_implementation.py
benchmarks/: benchmark_arma_optimization.py  benchmark_armax_optimization.py  benchmark_armax_optimization_auto.py  benchmark_tf2ss.py  benchmark_y_tilde.py  profile_flamegraph.py
data/: FRAC2.csv  PARSIM_Y_TILDE_SIMD_SUMMARY.txt  PC_Data_shifted.csv  Upstream-HP.csv  arma_validation_results.json  sopdt.csv  test_data.csv  test_data.txt  tf_creation_failures.txt
debug/: analyze_fir_bottleneck.py  check_arma_theory.py  debug_ararx_coeffs.py  debug_ararx_detailed.py  debug_arma_failure.py  debug_arma_iterations.py  debug_arma_nlp.py  debug_arma_nlp_detailed.py  debug_arma_simple.py  debug_arma_systemidentification.py
detrend/: __init__.py  client.py  detrending_filter.py  difference_filter.py  filter_data.py  high_pass_filter.py  interface_filter.py  none_filter.py  zero_mean_filter.py
doc/: frequency_domain.md
lib/: OLSims_methods.py  OLSims_methods.py.bak  Parsim_methods.py  Parsim_methods.py.bak  __init__.py  armax.py  armax.py.bak  armaxMIMO.py  armaxMIMO.py.bak  arx.py  arx.py.bak  arxMIMO.py  arxMIMO.py.bak  functionset.py  functionset.py.bak  functionsetSIM.py  functionsetSIM.py.bak
reports/: AGENT_6_SUMMARY.md  ALGORITHM_DIFFERENTIATION_INVESTIGATION.md  ALGORITHM_SIGNATURE_FIXES_SUMMARY.md  ARARX_ARMA_FINAL_VALIDATION_REPORT.md  ARARX_ARMA_VALIDATION_REPORT.md  ARARX_IMPROVEMENT_REPORT.md  ARARX_NLP_MASTER_ANALYSIS.md  ARARX_NLP_VALIDATION_REPORT.md  ARARX_TYPE_STABILITY_FIX_REPORT.md  ARARX_VALIDATION_SUMMARY.md  ARMAX_ERROR_INVESTIGATION_REPORT.md  ARMAX_ILLS_OPTIMIZATION_REPORT.md  ARMAX_ILLS_OPTIMIZATION_SUMMARY.md  ARMAX_PARALLEL_OPTIMIZATION_REPORT.md  ARMA_ACCURACY_IMPROVEMENT_REPORT.md  ARMA_ANALYSIS_SUMMARY.md  ARMA_CODE_COMPARISON.md  ARMA_FINAL_INVESTIGATION_REPORT.md  ARMA_FIX_CHECKLIST.md  ARMA_FIX_IMPLEMENTATION_GUIDE.md  ARMA_FIX_REPORT.md  ARMA_FIX_SUMMARY.md  ARMA_FIX_VALIDATION_REPORT.md  ARMA_MASTER_BRANCH_ANALYSIS.md  ARMA_NLP_IMPLEMENTATION_SUMMARY.md  ARMA_NLP_MASTER_ANALYSIS.md  ARMA_OPTIMIZATION_REPORT.md  ARMA_STATUS_SUMMARY.md  ARMA_VALIDATION_DELIVERABLES.md  ARMA_VALIDATION_SCRIPTS_README.md  ARMA_VALIDATION_STRATEGY.md  BJ_MIMO_CRASH_FIX_REPORT.md  BJ_MIMO_CRASH_INVESTIGATION_REPORT.md  COVARIANCE_OPTIMIZATION_CHANGES.md  COVARIANCE_OPTIMIZATION_REPORT.md  COVARIANCE_OPTIMIZATION_SUMMARY.md  FIR_PREALLOCATION_REPORT.md  HAROLD_TF_FIXES.md  (+33 more)
(+173 files in other folders)
