[project]
name = "sippy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "James Joseph", email = "jamestjsp@outlook.com" }
]
requires-python = ">=3.13"
dependencies = [
    "control>=0.10.2",
    "harold>=1.0.3",
    "jupyterlab>=4.4.9",
    "pandas>=2.3.3",
    "pytest>=8.4.2",
    "slycot>=0.6.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv", 
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
    "E741",  # ambiguous variable name `l` (common in signal processing)
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
